init scroll camera

--- a/src/views/layout/template.hbs
+++ b/src/views/layout/template.hbs
@@ -33,6 +33,9 @@
         <div class="scene__loader">Loading...</div>
       </div>
     </section>
+    <section class="scroll-container">
+
+    </section>
 
     {{#block "body"}}{{/block}}
   </body>
