--- a/src/style/includes/root.scss
+++ b/src/style/includes/root.scss
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 *,
@@ -14,7 +14,7 @@ body {
   color: white;
   // font-family: $basis;
   font-weight: 300;
-  overflow: hidden;
+  overflow-x: hidden;
   line-height: 1.3;
   position: relative;
 }
