--- a/src/style/components/scene.scss
+++ b/src/style/components/scene.scss
@@ -42,6 +42,19 @@
     transform: translate(-50%, -50%);
   }
 
+  &__scroll {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.4s ease;
+    opacity: 0;
+
+    .show-scroll-text & {
+      opacity: 1;
+    }
+  }
+
   &__overlay {
     height: 100vh;
     left: 0;
@@ -49,6 +62,10 @@
     top: 0;
     width: 100vw;
     pointer-events: none;
+    font-weight: 200;
+    font-family: Oswald;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 
     &::before {
       background-size: 100% 100%;
