--- a/src/views/layout/template.hbs
+++ b/src/views/layout/template.hbs
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Glowing tree</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+
     <% for (var css in htmlWebpackPlugin.files.css) { %>
       <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
     <% } %>
@@ -19,6 +21,7 @@
       <canvas class="scene__canvas" data-scene></canvas>
       <div class="scene__overlay">
         <div class="scene__loader">Loading...</div>
+        <div class="scene__scroll">scroll to explore</div>
       </div>
     </section>
     <section class="scroll-container">
