add github link

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -3,5 +3,6 @@
 @import 'includes/reset';
 @import 'includes/root';
 
+@import 'components/github';
 @import 'components/scene';
 @import 'components/scroll-container';
