--- a/src/views/layout/template.hbs
+++ b/src/views/layout/template.hbs
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="img/favicon_io/nsite.webmanifest">
+  <link rel="manifest" href="img/favicon_io/site.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 
   <% for (var css in htmlWebpackPlugin.files.css) { %>
