add credits and social

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -4,5 +4,6 @@
 @import 'includes/root';
 
 @import 'components/github';
+@import 'components/credits';
 @import 'components/scene';
 @import 'components/scroll-container';
