--- a/src/views/layout/template.hbs
+++ b/src/views/layout/template.hbs
@@ -14,6 +14,19 @@
   <link rel="manifest" href="./img/favicon_io/site.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 
+  <meta name="description" content="Glowing tree experiment using bloom effect shader in Three.js" />
+  <meta name="keywords" content="glowing, threejs, tree, robin, payot, experiment, bloom, lab">
+
+  <!-- socials meta tags -->
+  <meta property="og:title" content="Glowing tree">
+  <meta property="og:description" content="Three.js experiment, Robin Payot">
+  <meta property="og:image" content="./img/social.png">
+  <meta property="og:url" content="https://robpayot.github.io/glowing-tree/build/">
+  <meta property="og:site_name" content="Glowing tree">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="./img/social.png">
+  <meta name="twitter:image:alt" content="Glowing tree">
+
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
   <% } %>
@@ -34,7 +47,15 @@
         <path
           d="M22.9 86.7c-.1.3-.6.4-1 .2s-.7-.6-.5-.9c.1-.3.6-.4 1-.2s.6.6.5.9h0zm2.4 2.7c-.3.3-.9.1-1.2-.3-.4-.4-.5-1-.2-1.3s.8-.1 1.2.3c.4.5.5 1.1.2 1.3h0zm2.4 3.5c-.4.3-1 0-1.3-.5-.4-.5-.4-1.2 0-1.4.4-.3 1 0 1.3.5.4.5.4 1.1 0 1.4h0zm3.3 3.4c-.3.4-1 .3-1.6-.2-.5-.5-.7-1.2-.3-1.5.3-.4 1-.3 1.6.2.5.4.6 1.1.3 1.5h0zm4.5 1.9c-.1.5-.8.7-1.5.5s-1.1-.8-1-1.2c.1-.5.8-.7 1.5-.5s1.1.7 1 1.2h0zm4.9.4c0 .5-.6.9-1.3.9s-1.3-.4-1.3-.9.6-.9 1.3-.9 1.3.4 1.3.9h0zm4.6-.8c.1.5-.4 1-1.1 1.1s-1.3-.2-1.4-.7.4-1 1.1-1.1 1.3.2 1.4.7h0zm0 0" />
         </svg>
-      <span>Github link</span></a>
+      <span>Github link</span>
+    </a>
+    <div class="credits">
+      <div class="credits__title">3D assets by:</div>
+      <ul>
+        <li><a href="http://www.celialopez.fr/" target="_blank">Célia Lopez</a></li>
+        <li><a href="https://www.behance.net/RobinPoitevin" target="_blank">Robin Poitevin</a></li>
+      </ul>
+    </div>
   </section>
   <section class="scroll-container">
 
