add absolute social path

--- a/src/views/layout/template.hbs
+++ b/src/views/layout/template.hbs
@@ -20,11 +20,11 @@
   <!-- socials meta tags -->
   <meta property="og:title" content="Glowing tree">
   <meta property="og:description" content="Three.js experiment, Robin Payot">
-  <meta property="og:image" content="./img/social.png">
+  <meta property="og:image" content="https://robpayot.github.io/glowing-tree/build/img/social.png">
   <meta property="og:url" content="https://robpayot.github.io/glowing-tree/build/">
   <meta property="og:site_name" content="Glowing tree">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="./img/social.png">
+  <meta name="twitter:image" content="https://robpayot.github.io/glowing-tree/build/img/social.png">
   <meta name="twitter:image:alt" content="Glowing tree">
 
   <% for (var css in htmlWebpackPlugin.files.css) { %>
